--- a/TaxareProject/TaxareProject.csproj
+++ b/TaxareProject/TaxareProject.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,14 +55,90 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AdministrarConductores.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AdministrarConductores.Designer.cs">
+      <DependentUpon>AdministrarConductores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdministrarTaxis.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdministrarTaxis.Designer.cs">
+      <DependentUpon>AdministrarTaxis.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Conductor.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ConductoresXtaxi.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Controladores\ControladorConductores.cs" />
+    <Compile Include="Controladores\ControladorMarcas.cs" />
+    <Compile Include="Controladores\ControladorSecretaria.cs" />
+    <Compile Include="Controladores\ControladorTaxis.cs" />
+    <Compile Include="GastosVariable.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Kilometraje.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Licencia.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Marca.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responsabilidade.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Secretarias_transito.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SeguridadSocial.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Soat.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TaxareDB.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TaxareDB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TaxareDB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TaxareDB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TaxareDB.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Taxi.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tecnomecanica.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Toperacion.cs">
+      <DependentUpon>TaxareDB.tt</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AdministrarConductores.resx">
+      <DependentUpon>AdministrarConductores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdministrarTaxis.resx">
+      <DependentUpon>AdministrarTaxis.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +148,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -72,9 +158,31 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EntityDeploy Include="TaxareDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>TaxareDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="TaxareDB.edmx.diagram">
+      <DependentUpon>TaxareDB.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TaxareDB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TaxareDB.edmx</DependentUpon>
+      <LastGenOutput>TaxareDB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="TaxareDB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TaxareDB.edmx</DependentUpon>
+      <LastGenOutput>TaxareDB.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
