Taxis y condcutores listo

--- a/TaxareProject/App.config
+++ b/TaxareProject/App.config
@@ -19,5 +19,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="db_taxareEntities" connectionString="metadata=res://*/TaxareDB.csdl|res://*/TaxareDB.ssdl|res://*/TaxareDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=db_taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="db_taxareEntities1" connectionString="metadata=res://*/TaxareModel.csdl|res://*/TaxareModel.ssdl|res://*/TaxareModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=db_taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
