--- a/TaxareProject/TaxareProject.csproj
+++ b/TaxareProject/TaxareProject.csproj
@@ -68,70 +68,70 @@
       <DependentUpon>AdministrarTaxis.cs</DependentUpon>
     </Compile>
     <Compile Include="Conductor.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ConductoresXtaxi.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Controladores\ControladorConductores.cs" />
     <Compile Include="Controladores\ControladorMarcas.cs" />
     <Compile Include="Controladores\ControladorSecretaria.cs" />
     <Compile Include="Controladores\ControladorTaxis.cs" />
     <Compile Include="GastosVariable.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Kilometraje.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Licencia.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Marca.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Produccion.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responsabilidade.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Secretarias_transito.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SeguridadSocial.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Soat.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="TaxareDB.Context.cs">
+    <Compile Include="TaxareModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>TaxareDB.Context.tt</DependentUpon>
+      <DependentUpon>TaxareModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="TaxareDB.cs">
+    <Compile Include="TaxareModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="TaxareDB.Designer.cs">
+    <Compile Include="TaxareModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>TaxareDB.edmx</DependentUpon>
+      <DependentUpon>TaxareModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Taxi.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Tecnomecanica.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Toperacion.cs">
-      <DependentUpon>TaxareDB.tt</DependentUpon>
+      <DependentUpon>TaxareModel.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AdministrarConductores.resx">
       <DependentUpon>AdministrarConductores.cs</DependentUpon>
@@ -158,12 +158,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EntityDeploy Include="TaxareDB.edmx">
+    <EntityDeploy Include="TaxareModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>TaxareDB.Designer.cs</LastGenOutput>
+      <LastGenOutput>TaxareModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="TaxareDB.edmx.diagram">
-      <DependentUpon>TaxareDB.edmx</DependentUpon>
+    <None Include="TaxareModel.edmx.diagram">
+      <DependentUpon>TaxareModel.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -173,15 +173,15 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TaxareDB.Context.tt">
+    <Content Include="TaxareModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TaxareDB.edmx</DependentUpon>
-      <LastGenOutput>TaxareDB.Context.cs</LastGenOutput>
+      <DependentUpon>TaxareModel.edmx</DependentUpon>
+      <LastGenOutput>TaxareModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="TaxareDB.tt">
+    <Content Include="TaxareModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TaxareDB.edmx</DependentUpon>
-      <LastGenOutput>TaxareDB.cs</LastGenOutput>
+      <DependentUpon>TaxareModel.edmx</DependentUpon>
+      <LastGenOutput>TaxareModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
