--- a/TaxareProject/App.config
+++ b/TaxareProject/App.config
@@ -18,7 +18,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="db_taxareEntities" connectionString="metadata=res://*/TaxareDB.csdl|res://*/TaxareDB.ssdl|res://*/TaxareDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=db_taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="db_taxareEntities1" connectionString="metadata=res://*/TaxareModel.csdl|res://*/TaxareModel.ssdl|res://*/TaxareModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=db_taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="db_taxareEntities1" connectionString="metadata=res://*/db_taxare.csdl|res://*/db_taxare.ssdl|res://*/db_taxare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-P1FP5D4I\SQLEXPRESS;initial catalog=db_taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
