--- a/TaxareProject/TaxareProject.csproj
+++ b/TaxareProject/TaxareProject.csproj
@@ -61,6 +61,18 @@
     <Compile Include="AdministrarConductores.Designer.cs">
       <DependentUpon>AdministrarConductores.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdministrarCxT.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdministrarCxT.Designer.cs">
+      <DependentUpon>AdministrarCxT.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdministrarKilometrajes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdministrarKilometrajes.Designer.cs">
+      <DependentUpon>AdministrarKilometrajes.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdministrarLicencias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,74 +86,80 @@
       <DependentUpon>AdministrarTaxis.cs</DependentUpon>
     </Compile>
     <Compile Include="Conductor.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="ConductoresXtaxi.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controladores\ControladoraConductoresXtaxis.cs" />
+    <Compile Include="Controladores\ControladoraKilometraje.cs" />
     <Compile Include="Controladores\ControladoraLicencias.cs" />
     <Compile Include="Controladores\ControladorConductores.cs" />
     <Compile Include="Controladores\ControladorMarcas.cs" />
     <Compile Include="Controladores\ControladorSecretaria.cs" />
     <Compile Include="Controladores\ControladorTaxis.cs" />
+    <Compile Include="db_taxare.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_taxare.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db_taxare.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_taxare.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db_taxare.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_taxare.edmx</DependentUpon>
+    </Compile>
     <Compile Include="GastosVariable.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Kilometraje.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Licencia.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Marca.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Produccion.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Querys\ConductoresxTaxis.cs" />
     <Compile Include="Responsabilidade.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Secretarias_transito.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="SeguridadSocial.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Soat.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="sysdiagram.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TaxareModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TaxareModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TaxareModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TaxareModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TaxareModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TaxareModel.edmx</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Taxi.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Tecnomecanica.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <Compile Include="Toperacion.cs">
-      <DependentUpon>TaxareModel.tt</DependentUpon>
+      <DependentUpon>db_taxare.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AdministrarConductores.resx">
       <DependentUpon>AdministrarConductores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdministrarCxT.resx">
+      <DependentUpon>AdministrarCxT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdministrarKilometrajes.resx">
+      <DependentUpon>AdministrarKilometrajes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdministrarLicencias.resx">
       <DependentUpon>AdministrarLicencias.cs</DependentUpon>
@@ -158,6 +176,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EntityDeploy Include="db_taxare.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>db_taxare.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="db_taxare.edmx.diagram">
+      <DependentUpon>db_taxare.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -168,13 +193,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EntityDeploy Include="TaxareModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>TaxareModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="TaxareModel.edmx.diagram">
-      <DependentUpon>TaxareModel.edmx</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -183,15 +201,15 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TaxareModel.Context.tt">
+    <Content Include="db_taxare.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TaxareModel.edmx</DependentUpon>
-      <LastGenOutput>TaxareModel.Context.cs</LastGenOutput>
+      <DependentUpon>db_taxare.edmx</DependentUpon>
+      <LastGenOutput>db_taxare.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="TaxareModel.tt">
+    <Content Include="db_taxare.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TaxareModel.edmx</DependentUpon>
-      <LastGenOutput>TaxareModel.cs</LastGenOutput>
+      <DependentUpon>db_taxare.edmx</DependentUpon>
+      <LastGenOutput>db_taxare.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
