--- a/Controllers/Controllers.csproj
+++ b/Controllers/Controllers.csproj
@@ -48,9 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conductores.cs" />
     <Compile Include="Marcas.cs" />
     <Compile Include="Taxis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Toperacion.cs" />
     <Compile Include="Transito.cs" />
   </ItemGroup>
   <ItemGroup>
