--- a/Controllers/Controllers.csproj
+++ b/Controllers/Controllers.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Marcas.cs" />
     <Compile Include="Taxis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tecnomecanica.cs" />
     <Compile Include="Toperacion.cs" />
     <Compile Include="Transito.cs" />
   </ItemGroup>
