--- a/Controllers/Controllers.csproj
+++ b/Controllers/Controllers.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Conductores.cs" />
     <Compile Include="Marcas.cs" />
+    <Compile Include="SeguridadSocial.cs" />
     <Compile Include="Taxis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tecnomecanica.cs" />
