--- a/Controllers/Controllers.csproj
+++ b/Controllers/Controllers.csproj
@@ -49,8 +49,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conductores.cs" />
+    <Compile Include="ConductoresXtaxis.cs" />
+    <Compile Include="GastosVariables.cs" />
+    <Compile Include="Kilometraje.cs" />
+    <Compile Include="Licencias.cs" />
     <Compile Include="Marcas.cs" />
+    <Compile Include="Produccion.cs" />
+    <Compile Include="Responsabilidades.cs" />
     <Compile Include="SeguridadSocial.cs" />
+    <Compile Include="Soat.cs" />
     <Compile Include="Taxis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tecnomecanica.cs" />
