--- a/TaxareProject/App.config
+++ b/TaxareProject/App.config
@@ -18,5 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="db_taxareEntities1" connectionString="metadata=res://*/db_taxare.csdl|res://*/db_taxare.ssdl|res://*/db_taxare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-P1FP5D4I\SQLEXPRESS;initial catalog=db_taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="taxareEntities" connectionString="metadata=res://*/dbTaxare.csdl|res://*/dbTaxare.ssdl|res://*/dbTaxare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
