--- a/Broker/App.Config
+++ b/Broker/App.Config
@@ -4,7 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="taxareEntities" connectionString="metadata=res://*/dbTaxare.csdl|res://*/dbTaxare.ssdl|res://*/dbTaxare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="taxareEntities" connectionString="metadata=res://*/taxareEntities.csdl|res://*/taxareEntities.ssdl|res://*/taxareEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
