--- a/TaxareProject/App.config
+++ b/TaxareProject/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="taxareEntities" connectionString="metadata=res://*/dbTaxare.csdl|res://*/dbTaxare.ssdl|res://*/dbTaxare.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="taxareEntities" connectionString="metadata=res://*/taxareEntities.csdl|res://*/taxareEntities.ssdl|res://*/taxareEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=taxare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
