Clase itemList para le manejo d elos value ne los combo box (Fala implementar en otros formularios)

--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -55,6 +55,7 @@
     <Compile Include="GastosFijos.cs" />
     <Compile Include="GastosVariables.cs" />
     <Compile Include="Inventario.cs" />
+    <Compile Include="itemList.cs" />
     <Compile Include="Kilometrajes.cs" />
     <Compile Include="Licencias.cs" />
     <Compile Include="Marcas.cs" />
