Avance en la clase para generar PDFs

--- a/Controllers/Controllers.csproj
+++ b/Controllers/Controllers.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Conductores.cs" />
     <Compile Include="ConductoresXtaxis.cs" />
+    <Compile Include="creadorPDF.cs" />
     <Compile Include="GastosVariables.cs" />
     <Compile Include="Kilometraje.cs" />
     <Compile Include="Licencias.cs" />
