--- a/TaxareProject/TaxareProject.csproj
+++ b/TaxareProject/TaxareProject.csproj
@@ -62,12 +62,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdministrarGastosVariables.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AdministrarGastosVariables.Designer.cs">
-      <DependentUpon>AdministrarGastosVariables.cs</DependentUpon>
-    </Compile>
     <Compile Include="AdministrarSoat.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +110,12 @@
     <Compile Include="AdministrarTaxis.Designer.cs">
       <DependentUpon>AdministrarTaxis.cs</DependentUpon>
     </Compile>
+    <Compile Include="GastosVariables.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GastosVariables.Designer.cs">
+      <DependentUpon>GastosVariables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Inicio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,9 +129,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdministrarCxT.resx">
       <DependentUpon>AdministrarCxT.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AdministrarGastosVariables.resx">
-      <DependentUpon>AdministrarGastosVariables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdministrarKilometrajes.resx">
       <DependentUpon>AdministrarKilometrajes.cs</DependentUpon>
@@ -150,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdministrarTaxis.resx">
       <DependentUpon>AdministrarTaxis.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GastosVariables.resx">
+      <DependentUpon>GastosVariables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
