--- a/TaxareProject/TaxareProject.csproj
+++ b/TaxareProject/TaxareProject.csproj
@@ -110,11 +110,11 @@
     <Compile Include="AdministrarTaxis.Designer.cs">
       <DependentUpon>AdministrarTaxis.cs</DependentUpon>
     </Compile>
-    <Compile Include="GastosVariables.cs">
+    <Compile Include="AdministrarGastosVariables.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GastosVariables.Designer.cs">
-      <DependentUpon>GastosVariables.cs</DependentUpon>
+    <Compile Include="AdministrarGastosVariables.Designer.cs">
+      <DependentUpon>AdministrarGastosVariables.cs</DependentUpon>
     </Compile>
     <Compile Include="Inicio.cs">
       <SubType>Form</SubType>
@@ -148,8 +148,8 @@
     <EmbeddedResource Include="AdministrarTaxis.resx">
       <DependentUpon>AdministrarTaxis.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GastosVariables.resx">
-      <DependentUpon>GastosVariables.cs</DependentUpon>
+    <EmbeddedResource Include="AdministrarGastosVariables.resx">
+      <DependentUpon>AdministrarGastosVariables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
